--- a/index.html
+++ b/index.html
@@ -11,7 +11,20 @@
 </head>
 
 <body>
+    <header>
+        <h2>Hunting Phone</h2>
+    </header>
+    <main class="max-w-7xl mx-auto mt-8">
 
+        <!-- search result -->
+        <section>
+            <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+
+            </div>
+        </section>
+    </main>
+    <footer></footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
