--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     </header>
     <main class="max-w-7xl mx-auto mt-8">
 
+        <section class="bg-gray-100 p-4 m-4">
+            <input id="search-field" type="text" placeholder="Type here" placeholder="search..."
+                class="input input-bordered w-full max-w-xs" />
+            <button class="btn btn-accent" onclick="handleSearch()">Search</button>
+
+        </section>
+
         <!-- search result -->
         <section>
             <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
