--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
 
             </div>
+            <div id="show-all-container" class="hidden">
+                <button class="btn btn-active btn-accent ">Show All</button>
+            </div>
         </section>
     </main>
     <footer></footer>
