--- a/index.html
+++ b/index.html
@@ -23,8 +23,15 @@
 
         </section>
 
+        <!-- loader -->
+
         <!-- search result -->
         <section>
+
+            <div class="text-center my-40 hidden" id="loading-spinner">
+                <span class="loading loading-spinner loading-lg"></span>
+            </div>
+
             <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
 
             </div>
